# biokit

./: .gitignore  0.4.0  AUTHORS  ChangeLog  README.md  README.rst  demo.ipynb  package.py  requirements.txt  setup.cfg  setup.py
biokit/: _plot.py  cli.py  cox.ipynb
biokit/analysis/: __init__.py  _cell_annotation.py  _cox-WQTQRDLBBXHCMSM.py  _cox.py  _deffierence_tests.py  _fit_models.py  _group4.py  _lasso_cox.py  _pathway_enrichment.py  _signature_score.py  _trtmb.py
biokit/data/: __init__.py  _co_occurrence.py  _geo.py  _kegg.py  _metascape.py  _rank_df.py  _singlecell_marker.py
biokit/data_convert/: __init__.py  _bezier_curve_S.py  _binned_value.py  _complementary_color.py  _grid_average.py  _p2text.py  _text_similarity.py
biokit/plot/: __init__.py  _bar.py  _blast.py  _box.py  _circos.py  _co_occurrence.py  _colors.py  _cox.py  _crosstab.py  _dot.py  _evolution_tree.py  _exp_box.py  _fig.py  _fisher_bar.py  _fit_models.py  _heatmap.py  _illustrator.py  _kaplan_meier.py  _kobas.py  _lasso.py  _neuronetwork.py  _pca.py  _radar.py  _roc_plot.py  _single_cell.py  _timescape.py  _variants_landscape.py  _volcano_plot.py
biokit/preprocessing/: __init__.py  _gene_trans.py  _kaplan_meier.py  _read_vcf.py  _refactor_json.py  _sample_statistic.py  _variant_landscape.py  _variants_landscape.py  _vcf_to_mutation.py  _yucebio.py
biokit/recipe/: _differentially_expressed_gene_downstream.py  _palantir.py  _scanpy.py
biokit/report/: RNA.py
biokit/rscript/: 2.edgeR_exacttest.R  differently_expression_gene.R  differently_expression_genes.py  run_immunedeconv.R  xcell.R
(+20 files in other folders)
