[metadata]
name = biokit
author = tanghongzhen
author_email = tanghongzhen34@gmail.com
summary = awsome project created by pycman.
license = MIT
description_file = 
    README.rst
home_page = http://example.com
requires_python = >= 3.6

[files]
packages = 
    biokit


[entry_points]
console_scripts =
    cmd=package.module:function